working on readme

--- a/demo/index.html
+++ b/demo/index.html
@@ -30,6 +30,8 @@
       <demo-snippet>
         <template>
           <paperfire-anon is-anonymous="{{isAnon}}" uid="{{uid}}" debug></paperfire-anon>
+          <pre>isAnonymous: [[isAnon]]</pre>
+          <pre>uid: [[uid]]</pre>
         </template>
       </demo-snippet>
     </div>
