--- a/paperfire-anon.html
+++ b/paperfire-anon.html
@@ -33,7 +33,7 @@ an element to help manage anonymous authentication
           notify: true,
           reflectToAttribute: true
         },
-        //shows values in <pre>
+        //logs to console
         debug: Boolean,
         // If true this will automatically check user and if null will login in anonymously.
         login: Boolean,
